# ChangeLog for dev-db/mysql
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.176 2005/02/21 17:08:22 agriffis Exp $

  20 Feb 2005; Aron Griffis <agriffis@gentoo.org> mysql-4.0.22-r2.ebuild,
  mysql-4.1.8-r1.ebuild:
  4.0.22-r2 stable on ia64 #77805.  Add ~ia64 to 4.1.8-r1

  14 Feb 2005; Guy Martin <gmsoft@gentoo.org> mysql-4.0.22-r2.ebuild:
  Stable on hppa.

  06 Feb 2005; Joshua Kinard <kumba@gentoo.org> mysql-4.0.22-r2.ebuild:
  Marked stable on mips.

  01 Feb 2005; Robin H. Johnson <robbat2@gentoo.org> files/logrotate.mysql:
  Bug #76909 redux.

  01 Feb 2005; Robin H. Johnson <robbat2@gentoo.org> files/logrotate.mysql:
  Bug #80308.

  29 Jan 2005; Robin H. Johnson <robbat2@gentoo.org>
  mysql-3.23.52-r1.ebuild, mysql-3.23.56.ebuild, mysql-3.23.57-r1.ebuild,
  mysql-3.23.57.ebuild, mysql-3.23.58-r1.ebuild, mysql-3.23.58.ebuild,
  mysql-4.0.22-r1.ebuild, mysql-4.0.22-r2.ebuild, mysql-4.0.22.ebuild,
  mysql-4.0.23-r1.ebuild, mysql-4.0.23-r2.ebuild, mysql-4.0.23.ebuild,
  mysql-4.1.7.ebuild, mysql-4.1.8-r1.ebuild, mysql-4.1.8.ebuild:
  Add warning about InnoDB, bug #44592.

  23 Jan 2005; Robin H. Johnson <robbat2@gentoo.org>
  mysql-3.23.52-r1.ebuild, mysql-3.23.56.ebuild, mysql-3.23.57-r1.ebuild,
  mysql-3.23.57.ebuild, mysql-3.23.58-r1.ebuild, mysql-3.23.58.ebuild,
  mysql-4.0.22-r1.ebuild, mysql-4.0.22-r2.ebuild, mysql-4.0.22.ebuild,
  mysql-4.0.23-r1.ebuild, mysql-4.0.23-r2.ebuild, mysql-4.0.23.ebuild,
  mysql-4.1.7.ebuild, mysql-4.1.8-r1.ebuild, mysql-4.1.8.ebuild:
  Fix bug #79216.

  21 Jan 2005; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.22-r2.ebuild,
  mysql-4.0.23-r2.ebuild:
  Stupid bug for older libtool versions, that leaves out .so again :-(.

  21 Jan 2005; Simon Stelling <blubb@gentoo.org> mysql-4.0.22-r2.ebuild:
  stable on amd64 wrt 77805

  21 Jan 2005; Luca Barbato <lu_zero@gentoo.org> mysql-4.0.22-r2.ebuild:
  Marked ppc
