@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/mysql-4.0.22-r2.ebuild,v 1.13 2005/02/21 17:08:22 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/mysql-4.0.22-r2.ebuild,v 1.14 2005/02/27 06:20:29 robbat2 Exp $
 
 inherit eutils gnuconfig
 #to accomodate -laadeedah releases
@@ -124,6 +124,13 @@ src_unpack() {
 		#WANT_AUTOMAKE=1.7 automake
 		gnuconfig_update
 	done
+	
+	# upstream bug http://bugs.mysql.com/bug.php?id=7971
+	# names conflict with stuff in 2.6.10 kernel headers
+	sed -i \
+		-e "s/set_bit/my__set_bit/g" \
+		-e "s/clear_bit/my__clear_bit/g" \
+	    ${S}/extra/replace.c || die "Failed to fix bitops"
 }
 
 src_compile() {
