@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/mysql-4.1.7.ebuild,v 1.6 2005/01/30 00:18:18 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/mysql-4.1.7.ebuild,v 1.7 2005/02/27 06:20:29 robbat2 Exp $
 
 inherit eutils gnuconfig
 #to accomodate -laadeedah releases
@@ -95,6 +95,13 @@ src_unpack() {
 	# Saving this for a rainy day, in case we need it again
 	#WANT_AUTOMAKE=1.7 automake
 	gnuconfig_update
+	
+	# upstream bug http://bugs.mysql.com/bug.php?id=7971
+	# names conflict with stuff in 2.6.10 kernel headers
+	sed -i \
+		-e "s/set_bit/my__set_bit/g" \
+		-e "s/clear_bit/my__clear_bit/g" \
+	    ${S}/extra/replace.c || die "Failed to fix bitops"
 }
 
 src_compile() {
